# vton-research-watcher

./: .env  README.md  docker-compose.yml  list.txt  pyproject.toml  setupdb.py
scraper/: __init__.py  htmlScraper.py  main.py  scraper_factory.py
shared/: config.py
src/processor/: __init__.py  base_processor.py  hostedllm_processor.py  main.py  processing_service.py  processor_factory.py  simple_processor.py
src/scraper/: __init__.py  article_dba.py  base_scraper.py  deduplicate.py  htmlScraper.py  main.py  ratelimiter.py  scraping_service.py
src/shared/: __init__.py  article_dba.py  config.py  database.py  models.py
tests/: conftest.py  test_articledba.py  test_htmlscraper.py  test_llm_processor.py  test_process_service.py  test_ratelimiter.py  test_scraper.py  test_scraper_factory.py  test_simple_processor.py
tests/data/: bad_abstract.html  bad_paging.html  badlist.html  list.html  valid_abstract.html  valid_text.txt
